v1.0: update completed